--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ services:
   - docker
 
 script:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - make up
 
 notifications:
