--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,6 +1,7 @@
 pull_request_rules:
   - name: automatic merge for Renovate pull requests
     conditions:
+      - base=master
       - author=renovate[bot]
       - status-success=Travis CI - Pull Request
     actions:
